# simple_neural_net

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
benches/: main_benchmark.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: arr.rs  layer.rs  lib.rs  perceptron.rs
tests/: access_weights.rs  basic_test.rs  proceed.rs  proceed_verbosely.rs
