[package]
name = "simple_neural_net"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
simple_neural_net_macro = { path = "./macro"}

[dev-dependencies]
criterion = "0.5.1"
rand_seeder = "0.3.0"
rand_pcg = "0.3.1"

[[bench]]
name = "main_benchmark"
harness = false
